fabric/testdata/out/ing_setanta-category-gatekeeper-put-api-wildcard-service-stupscategorytests.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\", \"category-gatekeeper.categories.write\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/api/**\") \u0026\u0026 Method(\"PUT\") \u0026\u0026 JWTPayloadAllKV(\"sub\",
      \"stups_category-tests\") \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"application":"setanta-category-gatekeeper","controller-uid":"a33746cf-7888-46c2-8dc9-60c003d3127f","deployment-id":"d-2azdig4sinn5uusgktqsvf288n","pipeline-id":"l-2nk7f9gw2i2t6hkqdv6j3v97ve"},"name":"setanta-category-gatekeeper-put-api-wildcard-service-stupscategorytests","namespace":"default"},"spec":{"rules":[{"host":"category-gatekeeper.smart-product-platform-test.zalan.do","http":{"paths":[{"ba [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "category-gatekeeper.categories.write") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(4) && Path("/api/**") && Method("PUT") &&
      JWTPayloadAllKV("sub", "stups_category-tests") && Header("X-Forwarded-Proto",
      "https")
  creationTimestamp: "2021-10-05T10:19:12Z"
  generation: 1
  labels:
    application: setanta-category-gatekeeper
    controller-uid: a33746cf-7888-46c2-8dc9-60c003d3127f
    deployment-id: d-2azdig4sinn5uusgktqsvf288n
    pipeline-id: l-2nk7f9gw2i2t6hkqdv6j3v97ve
  name: setanta-category-gatekeeper-put-api-wildcard-service-stupscategorytests
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-category-gatekeeper
    uid: a33746cf-7888-46c2-8dc9-60c003d3127f
  resourceVersion: "1380106422"
  uid: 1dd51ecc-fe2a-4664-9dd2-d0d1f6d2c393
spec:
  rules:
  - host: category-gatekeeper.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-category-gatekeeper
            port:
              name: api-port
        pathType: ImplementationSpecific
  - host: spp-category-gatekeeper-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-category-gatekeeper
            port:
              name: api-port
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
